# AI_Bitcoin_Analytics

./: .replit  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  robots.txt  sitemap.xml
.streamlit/: config.toml
api/: main.py
api/services/: education.py  metrics.py
attached_assets/: Pasted-Below-is-a-comprehensive-list-of-functional-and-non-functional-requirements-for-the-Bitcoin-ETF-Anal-1738722375050.txt
components/: analytics.py  education.py  metrics.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: AIPredictions.tsx  CorrelationAnalysis.tsx  CostAnalysis.tsx  LiquidityAnalysis.tsx  RiskMetrics.tsx
pages/: 1_📊_Correlation_Analysis.py  2_📈_Tracking_Error.py  3_💧_Liquidity_Analysis.py  4_⚠️_Risk_Metrics.py  5_🤖_AI_Predictions.py  6_📚_Education.py  7_💰_Cost_Analysis.py
styles/: custom.css
templates/: base.html  correlation.html  cost_analysis.html  education.html  index.html  liquidity.html  predictions.html  risk_metrics.html
utils/: alerts.py  data_fetcher.py  database.py  predictions.py  sitemap.py  visualizations.py
