[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "openai>=1.63.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.37",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.52",
]
